--- a/httpd/css/jt-narrow.css
+++ b/httpd/css/jt-narrow.css
@@ -103,3 +103,45 @@ rect.pane {
     fill: none;
     pointer-events: all;
 }
+
+input[type=checkbox] {
+    visibility: hidden;
+}
+
+.switch {
+    width: 16px;
+    height: 16px;
+    background: #ddd;
+
+    border-radius: 100%;
+    position: relative;
+}
+
+.switch label {
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100px;
+
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    transition: all .5s ease;
+    cursor: pointer;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    z-index: 1;
+    padding-left: 7px;
+
+    background: #333;
+
+    -webkit-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.5);
+    -moz-box-shadow:inset 0px 1px 3px rgba(0,0,0,0.5);
+    box-shadow:inset 0px 1px 3px rgba(0,0,0,0.5);
+}
+
+.switch input[type=checkbox]:checked + label {
+    background: #26ca28;
+}
